--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -137,6 +137,9 @@ jobs:
           git clone https://github.com/WildPlusKernel/AnyKernel3.git -b "$ANYKERNEL_BRANCH"
           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b "$SUSFS_BRANCH"
           git clone https://github.com/WildPlusKernel/kernel_patches.git
+          cd kernel_patches
+          rm -rf KernelSU-Next*.patch
+          echo "Delete KernelSU Next Patch"
 
       - name: Set CONFIG Environment Variable
         run: |
