--- a/.github/workflows/build-kernel-release.yml
+++ b/.github/workflows/build-kernel-release.yml
@@ -54,35 +54,35 @@ on:
         default: ""  # Default is empty, but can be filled in if 'Other' is selected
 
 jobs:
-  build-kernel-a12-5-10:
-    uses: ./.github/workflows/kernel-a12-5.10.yml
-    secrets: inherit
-    with:
-      runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+  # build-kernel-a12-5-10:
+  #   uses: ./.github/workflows/kernel-a12-5.10.yml
+  #   secrets: inherit
+  #   with:
+  #     runner: ${{ inputs.runner }}
+  #     lto_type: ${{ inputs.lto_type }}
+  #     kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  #     kernelsu_branch: ${{ inputs.kernelsu_branch }}
+  #     kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
 
-  build-kernel-a13-5-10:
-    uses: ./.github/workflows/kernel-a13-5.10.yml
-    secrets: inherit
-    with:
-      runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+  # build-kernel-a13-5-10:
+  #   uses: ./.github/workflows/kernel-a13-5.10.yml
+  #   secrets: inherit
+  #   with:
+  #     runner: ${{ inputs.runner }}
+  #     lto_type: ${{ inputs.lto_type }}
+  #     kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  #     kernelsu_branch: ${{ inputs.kernelsu_branch }}
+  #     kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
 
-  build-kernel-a13-5-15:
-    uses: ./.github/workflows/kernel-a13-5.15.yml
-    secrets: inherit
-    with:
-      runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+  # build-kernel-a13-5-15:
+  #   uses: ./.github/workflows/kernel-a13-5.15.yml
+  #   secrets: inherit
+  #   with:
+  #     runner: ${{ inputs.runner }}
+  #     lto_type: ${{ inputs.lto_type }}
+  #     kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  #     kernelsu_branch: ${{ inputs.kernelsu_branch }}
+  #     kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
 
   build-kernel-a14-5-15:
     uses: ./.github/workflows/kernel-a14-5.15.yml
@@ -94,25 +94,25 @@ jobs:
       kernelsu_branch: ${{ inputs.kernelsu_branch }}
       kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
 
-  build-kernel-a14-6-1:
-    uses: ./.github/workflows/kernel-a14-6.1.yml
-    secrets: inherit
-    with:
-      runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+  # build-kernel-a14-6-1:
+  #   uses: ./.github/workflows/kernel-a14-6.1.yml
+  #   secrets: inherit
+  #   with:
+  #     runner: ${{ inputs.runner }}
+  #     lto_type: ${{ inputs.lto_type }}
+  #     kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  #     kernelsu_branch: ${{ inputs.kernelsu_branch }}
+  #     kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
 
-  build-kernel-a15-6-6:
-    uses: ./.github/workflows/kernel-a15-6.6.yml
-    secrets: inherit
-    with:
-      runner: ${{ inputs.runner }}
-      lto_type: ${{ inputs.lto_type }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
+  # build-kernel-a15-6-6:
+  #   uses: ./.github/workflows/kernel-a15-6.6.yml
+  #   secrets: inherit
+  #   with:
+  #     runner: ${{ inputs.runner }}
+  #     lto_type: ${{ inputs.lto_type }}
+  #     kernelsu_variant: ${{ inputs.kernelsu_variant }}
+  #     kernelsu_branch: ${{ inputs.kernelsu_branch }}
+  #     kernelsu_branch_other: ${{ inputs.kernelsu_branch_other }}
 
   trigger-release:
     runs-on: ubuntu-latest
@@ -229,11 +229,11 @@ jobs:
           GITLAB_REPO="susfs4ksu"
 
           declare -A BRANCH_MAP=(
-            ["gki_android12_5_10"]="gki-android12-5.10"
-            ["gki_android13_5_10"]="gki-android13-5.10"
-            ["gki_android13_5_15"]="gki-android13-5.15"
+            # ["gki_android12_5_10"]="gki-android12-5.10"
+            # ["gki_android13_5_10"]="gki-android13-5.10"
+            # ["gki_android13_5_15"]="gki-android13-5.15"
             ["gki_android14_5_15"]="gki-android14-5.15"
-            ["gki_android14_6_1"]="gki-android14-6.1"
+            # ["gki_android14_6_1"]="gki-android14-6.1"
           )
 
           for var_name in "${!BRANCH_MAP[@]}"; do
