--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -191,7 +191,7 @@ jobs:
 
           # Revert commit of remove pts_unix98_lookup_pre
           cd KernelSU
-          git revert -m 1 3a73585 -n
+          git revert -m 1 $(git log --grep="remove devpts hook" --pretty=format:"%h") -n
           KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 12063)
           echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
           sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
